# whisper-burn

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: audio.rs  decoding.rs  helper.rs  lib.rs  model.rs  model_config.rs  token.rs  transcribe.rs  whisper_helper.rs
src/decoding/: logit_filter.rs  mod.rs  sequence_ranker.rs  token_decoder.rs
src/model/: load.rs  mod.rs
whisper-transcribe/: Cargo.toml
whisper-transcribe/src/: main.rs
