[package]
name = "whisper"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgpu-backend", "ffmpeg-input"]
torch-backend = ["burn-tch", "burn/tch"]
wgpu-backend = ["burn-wgpu", "burn/wgpu"]
ffmpeg-input = ["ffmpeg-next"]
hound-input = ["hound"]

[dependencies]
burn-import = {  version = "0.13" }
burn = {  version = "0.13", optional = true }
burn-tch = { version = "0.13", optional = true }
burn-wgpu = {  version = "0.13", optional = true }

serde = { version = "1", features = ["std", "derive"] }
num-traits = "0.2"
hound = { version = "3.5.1", optional = true }
tokenizers = { version = "0.15.2", default-features = false, features = [
    "onig",
    "http",
] }
#npy = "0.4.0"
cfg-if = "1"

ffmpeg-next = { version = "7.0.0", features = [
    "build",
    "build-license-gpl", "build-license-nonfree", "build-license-version3"
], optional = true }

reqwest = "0.12"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
pkg-config = "0.3"
