[package]
name = "whisper"
version = "0.1.0"
edition = "2021"
authors = ["dashuai009 dashuai009@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgpu-backend"]
torch-backend = ["burn-tch", "burn/tch"]
wgpu-backend = ["burn-wgpu", "burn/wgpu"]

[dependencies]
burn-import = {  version = "0.13" }
burn = {  version = "0.13", optional = true }
burn-tch = { version = "0.13", optional = true }
burn-wgpu = {  version = "0.13", optional = true }

serde = { version = "1", features = ["std", "derive"] }
num-traits = "0.2"
tokenizers = { version = "0.19.1", default-features = false, features = [
    "onig",
    "http",
] }
cfg-if = "1"
serde_json = "1.0.116"
hf-hub = { version = "0.3.2", path = "./hf-hub" }

[build-dependencies]
pkg-config = "0.3"


[workspace]
members = ["whisper-transcribe"]